--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9020,7 +9020,7 @@ form .input-error-2:focus {
 .portfolio-item.hover-bottom figure figcaption .hover-heading {
   display: inline-block;
   padding-left: 40px;
-  line-height: 2.6;
+  line-height: 1;
   letter-spacing: 2.8px;
   color: #ececec;
 }
@@ -9133,7 +9133,7 @@ form .input-error-2:focus {
   margin: 0;
   padding-bottom: 20px;
   font-size: .95em;
-  line-height: 1.7;
+  line-height: 1.2;
   color: #ececec;
   opacity: 0;
   -webkit-transition: opacity 0.6s;
@@ -9142,7 +9142,6 @@ form .input-error-2:focus {
 
 .portfolio-item.hover-side figure figcaption .hover-text {
   margin: 0;
-  font-size: .6em;
   line-height: 1.6;
   color: #999;
   opacity: 0;
